got dashboard and login ready

--- a/explore.html
+++ b/explore.html
@@ -8,6 +8,13 @@
 	</header>
 	<body id = "TotalController" ng-controller="TotalController">
 		<div class = "navigationtab">
+			<img id = "xsb" src="pictures/xsb.png"/>
+			<form class="login" name="login">
+				Username: <input type="text" id="username"/>
+				Password: <input type="text" id="password"/>
+				<input type="button" id="login" value="Login"/>
+				<input type="button" id="signup" value="Sign Up"/>
+			</form>
 		</div>
 		<div id="explore-page">
 			<div id="search-panel">
