--- a/main.html
+++ b/main.html
@@ -6,7 +6,13 @@
 	</header>
 	<body>
 		<div class = "navigationtab">
-			<img id = "xsb" src="pictures/XSB_200.jpg"/>
+			<img id = "xsb" src="pictures/xsb.png"/>
+			<form class="login" name="login">
+				Username: <input type="text" id="username"/>
+				Password: <input type="text" id="password"/>
+				<input type="button" id="login" value="Login"/>
+				<input type="button" id="signup" value="Sign Up"/>
+			</form>
 		</div>
 		<div id = "navigation-intro">
 			<ul>
