Friday morning latest commit with main and design page updated

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<div id = "navigation-intro">
 			<ul>
 				<li><a href="explore.html" value = "explore" class = "show"><h4>Explore</h4></a></li>
-				<li><a href="#" value = "design" class = "show"><h4>Design</h4></a></li>
+				<li><a href="design.html" value = "design" class = "show"><h4>Design</h4></a></li>
 				<li><a href="#" value = "create" class = "show"><h4>Create</h4></a></li>
 			</ul>
 			<div id = "navigation-explain">
