added dashboard on tab

--- a/design.html
+++ b/design.html
@@ -8,10 +8,15 @@
 			<img id = "xsb" src="pictures/xsb.png"/>
 			<form class="login" name="login">
 				Username: <input type="text" id="username"/>
-				Password: <input type="text" id="password"/>
+				Password: <input type="password" id="password"/>
 				<input type="button" id="login" value="Login"/>
 				<input type="button" id="signup" value="Sign Up"/>
 			</form>
+			<ul class = "navigation-subtab">
+				<li><a href="explore.html" value = "explore"><h4>Explore</h4></a></li>
+				<li><a href="design.html" value = "design"><h4>Design</h4></a></li>
+				<li><a href="#" value = "create"><h4>Create</h4></a></li>
+			</ul>	
 		</div>
 		<iframe src="https://www.tinkercad.com/things/3bTjFYWREmK-sizzling-gogo/edit"></iframe>
 	</body>
