--- a/explore.html
+++ b/explore.html
@@ -13,8 +13,13 @@
 				Username: <input type="text" id="username"/>
 				Password: <input type="text" id="password"/>
 				<input type="button" id="login" value="Login"/>
-				<input type="button" id="signup" value="Sign Up"/>
+				<input type="button" id="password" value="Sign Up"/>
 			</form>
+			<ul class = "navigation-subtab">
+				<li><a href="explore.html" value = "explore"><h4>Explore</h4></a></li>
+				<li><a href="design.html" value = "design"><h4>Design</h4></a></li>
+				<li><a href="#" value = "create"><h4>Create</h4></a></li>
+			</ul>	
 		</div>
 		<div id="explore-page">
 			<div id="search-panel">
